2013-02-16  Kevin Ryde  <user42@zip.com.au>

	* info-look.el (info-lookup-select-mode): If major-mode has no
	info-lookup-alist entry then search up derived-mode-parent (bug#8660).

2013-02-16  Jambunathan K  <kjambunathan@gmail.com>

	* replace.el (read-regexp): Tighten the regexp that matches tag.
	When tag is retrieved with `find-tag-default', use regexp that
	matches tag at point.  Also update docstring (Bug#13687).

2013-02-16  Eli Zaretskii  <eliz@gnu.org>

	* autorevert.el (auto-revert-notify-add-watch): With 'w32notify',
	add watch for the file, not its parent directory, since w32notify
	sets up the watch for the directory internally.  (Bug#13725)

2013-02-16  Glenn Morris  <rgm@gnu.org>

	* image.el (image-default-frame-delay): New variable.
	(image-animated-p): Use image-default-frame-delay.
	(image-minimum-frame-delay): New constant.
	(image-animate-timeout): Use image-minimum-frame-delay.

	* image.el (image-nth-frame): New, split from image-animate-timeout.
	(image-animate-timeout): Use image-nth-frame.
	* image-mode.el (image-goto-frame, image-next-frame)
	(image-previous-frame): New commands.
	(image-mode-map): Add new frame commands.

2013-02-16  Jonas Bernoulli  <jonas@bernoul.li>

	* emacs-lisp/tabulated-list.el (tabulated-list-print-col):
	If col-desc already has help-echo, use it.  (Bug#13563)

2013-02-16  Glenn Morris  <rgm@gnu.org>

	* image.el (image-current-frame): New variable.
	(image-animate-timeout): Set image-current-frame.
	* image-mode.el (image-mode): For animated images,
	display a frame counter via mode-line-process.

	* font-lock.el (lisp-font-lock-keywords-1): Add defvar-local.

2013-02-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (eval-expression): Let `exp' set the mark (bug#13724).

2013-02-15  Alan Mackenzie  <acm@muc.de>

	* emacs-lisp/easy-mmode.el (define-globalized-minor-mode): When a
	global minor mode has been enabled, call the minor mode function